/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java project to get you started.
 * For more details take a look at the Java Quickstart chapter in the Gradle
 * User Manual available at https://docs.gradle.org/5.4.1-20190522110022+0000/userguide/tutorial_java_projects.html
 */

plugins {
    // Apply the java plugin to add support for Java
    id 'java'

    // Apply the application plugin to add support for building an application
    id 'application'
}

repositories {
    // Use jcenter for resolving your dependencies.
    // You can declare any Maven/Ivy/file repository here.
    jcenter()
}

dependencies {
    // This dependency is found on compile classpath of this component and consumers.
    implementation 'com.google.guava:guava:27.0.1-jre'
    implementation 'org.javatuples:javatuples:1.2'
    
    implementation 'org.ow2.asm:asm:7.1'
    implementation 'org.ow2.asm:asm-tree:7.1'

    // Use JUnit test framework
    testImplementation 'junit:junit:4.12'
}

java {
	sourceCompatibility = JavaVersion.VERSION_12
	targetCompatibility = JavaVersion.VERSION_12
}

tasks.withType(JavaCompile) {
    it.options.compilerArgs.add('--enable-preview')
}

run {
    jvmArgs(['--enable-preview'])
}

sourceSets {
	jxelib {
		java {
			srcDirs = ["src/jxelib/java"]
			compileClasspath = [file("src/main/java")]
			outputDir = file("jxelib")
		}
	}
}

classes.dependsOn compileJxelibJava

clean {
	delete sourceSets.jxelib.java.outputDir
}

// Define the main class for the application
mainClassName = 'be.seeseemelk.jxe.App'